melhorias e ajustes de pequenos pontos